--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.App{
+  margin: 0;
+  padding: 0;
+  /* overflow-x: hidden;
+  scroll-behavior: smooth; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* start preload clock  */
+.preloud1{
+  position: relative;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.preloud{
+  position: absolute;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 95vh;
+  background:#fff;
+  width: 100%;
+  z-index: 1000;
 }
-
-.App-link {
-  color: #61dafb;
+.preloud img {
+  height: 120px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.HomeN {
+  display: none;
 }
+/* End preload clock  */
